--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "semantic-release-circleci-orb",
+  "name": "@outreach/semantic-release-circleci-orb",
   "description": "semantic-release plugin to publish CircleCI Orbs",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "author": "Matt Oakes (https://mattoakes.net)",
   "scripts": {
     "lint": "xo",
