--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "@outreach/semantic-release-circleci-orb",
   "description": "semantic-release plugin to publish CircleCI Orbs",
-  "version": "1.1.2",
+  "version": "1.1.4",
   "author": "Matt Oakes (https://mattoakes.net)",
   "scripts": {
-    "lint": "xo",
     "pretest": "npm run lint",
     "semantic-release": "semantic-release",
     "test": "nyc ava -v"
@@ -16,30 +15,15 @@
     "Matt Oakes <hello@mattoakes.net> (https://mattoakes.net)"
   ],
   "dependencies": {
-    "@semantic-release/error": "^2.2.0",
-    "aggregate-error": "^2.0.0",
-    "execa": "^1.0.0",
-    "npm": "^6.4.1",
-    "read-pkg": "^5.0.0"
+    "@semantic-release/error": "^3.0.0",
+    "aggregate-error": "^4.0.1",
+    "execa": "^6.1.0"
   },
   "devDependencies": {
-    "@semantic-release/git": "^7.0.8",
-    "ava": "^1.0.1",
-    "clear-module": "^3.0.0",
-    "commitizen": "^3.0.5",
-    "cz-conventional-changelog": "^2.1.0",
-    "dockerode": "^2.5.7",
-    "fs-extra": "^7.0.1",
-    "get-stream": "^5.0.0",
-    "got": "^9.3.2",
-    "mockserver-client": "^5.5.0",
-    "nyc": "^13.1.0",
-    "p-retry": "^4.0.0",
-    "semantic-release": "^15.13.3",
-    "sinon": "^7.1.1",
-    "stream-buffers": "^3.0.2",
-    "tempy": "^0.2.1",
-    "xo": "^0.24.0"
+    "ava": "^4.3.3",
+    "nyc": "^15.1.0",
+    "semantic-release": "^19.0.5",
+    "tempy": "^3.0.0"
   },
   "engines": {
     "node": ">=8.3"
